// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de Citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1647996961523,
      "mascota": "Nuevo Name",
      "propietario": "Diego",
      "sintomas": "Solo duerme",
      "telefono": "55122312",
    },
  ],
}
`;

exports[`Probar la clase de Citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1647996961523,
      "mascota": "Megan",
      "propietario": "Diego",
      "sintomas": "Solo duerme",
      "telefono": "55122312",
    },
  ],
}
`;

exports[`Probar la clase de Citas Eliminar Cita 1`] = `
Citas {
  "citas": Array [],
}
`;
